Fixed align of 2moro weather info

--- a/static/estilo.css
+++ b/static/estilo.css
@@ -86,7 +86,7 @@ h1,h3{color:#2e4054;}
 }
 .col3{
   float:left;
-  width: 33.33%;
+  width: 32%;
   text-align: center;
   border:0px;
   /*border-radius: 50%;
